Spacing issue fix

--- a/dr2/styles.css
+++ b/dr2/styles.css
@@ -68,6 +68,10 @@ nav {
     display: none;
 }
 
+.team {
+    margin-top: 10vw;
+}
+
 @media (max-width: 480px) {
     .about-hero {
         max-width: 90vw;
@@ -79,5 +83,21 @@ nav {
 
     .spac {
         display: block;
+    }
+
+    .team {
+        margin-top: 200vw;
+    }
+}
+
+@media (max-width: 360px) {
+    .team {
+        margin-top: 300vw;
+    }
+}
+
+@media (max-width: 768px) {
+    .team {
+        margin-top: 60vw;
     }
 }
